--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "yosay": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "^2.1.0",
-    "eslint-config-google": "^0.5.0",
+    "eslint": "^2.13.1",
+    "eslint-config-xo-space": "^0.14.0",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^2.0.0",
