--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "extends": "xo-space",
     "env": {
       "mocha": true
-    }
+    },
+    "ecmaVersion": 6
   },
   "repository": "cybersettler/generator-websemble",
   "scripts": {
