--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-websemble",
-  "version": "0.2.3",
+  "version": "0.2.2",
   "description": "Websemble app generator.",
   "homepage": "github.com/cybersettler/generator-websemble",
   "author": {
@@ -25,8 +25,10 @@
     "yosay": "^1.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "eslint": "^2.13.1",
     "eslint-config-xo-space": "^0.14.0",
+    "eslint-plugin-babel": "^3.3.0",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^2.0.0",
@@ -42,9 +44,9 @@
   "eslintConfig": {
     "extends": "xo-space",
     "env": {
-      "mocha": true
-    },
-    "ecmaVersion": 6
+      "mocha": true,
+      "es6": true
+    }
   },
   "repository": "cybersettler/generator-websemble",
   "scripts": {
