--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "extends": "google",
     "env": {
       "mocha": true
+    },
+    "ecmaFeatures": {
+        "modules": true
     }
   },
   "repository": "cybersettler/generator-websemble",
