--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "eslint": "^3.3.0",
     "eslint-config-google": "^0.6.0",
-    "eslint-config-xo-space": "^0.14.0",
+    "eslint-config-xo": "^0.15.3",
     "gulp": "^3.9.0",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^2.0.0",
@@ -41,13 +41,7 @@
     "yeoman-test": "^1.4.0"
   },
   "eslintConfig": {
-    "extends": "google",
-    "env": {
-      "mocha": true
-    },
-    "ecmaFeatures": {
-        "modules": true
-    }
+    "extends": "google"
   },
   "repository": "cybersettler/generator-websemble",
   "scripts": {
