--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "less": "^2.6.1",
+    "lodash": "^4.15.0",
     "yeoman-generator": "^0.22.0",
     "yosay": "^1.0.2"
   },
